# poetry-kernel

./: FAQ.md  LICENSE.md  README.md  pyproject.toml  setup.py
.github/workflows/: pypi.yaml
data_kernelspec/: kernel.json
poetry_kernel/: __main__.py  kernelspec.py
